tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-release-directive.wyst
module removed_release_directive

fn store(addr: @atomic<u64>) {
  #release addr.store(1, .relaxed)
}
